--- a/Jeremy/learning_nn.Rmd
+++ b/Jeremy/learning_nn.Rmd
@@ -7,7 +7,7 @@ library(dplyr)
 all_data <- read.csv('train.csv')
 train <- all_data[,sapply(all_data, is.numeric)]
 test <- train[0:500,]
-train <- train[500:nrow(houses),]
+train <- train[500:nrow(train),]
 x_train <- train %>%
   select(-SalePrice,-Id)
 y_train <- train %>%
