--- a/Jeremy/learning_nn.Rmd
+++ b/Jeremy/learning_nn.Rmd
@@ -1,13 +1,26 @@
 ```{r}
 library(keras)
 library(dplyr)
+library(png)
 ```
 
+# Read in the data
+First we read in the data and separate it out into training data and test data. The test data that we have reserved will only be used at the very end to evaluate the model.
+
 ```{r}
+img <- readPNG('bee_imgs/bee_imgs/001_043.png')
+img[1,1,]
 all_data <- read.csv('train.csv')
+# this line filters out all non-numeric columns, as the model doesn't know how to handle strings
 train <- all_data[,sapply(all_data, is.numeric)]
 test <- train[0:500,]
 train <- train[500:nrow(train),]
+```
+
+# Seperate out the output columns
+For the training and testing data, we separate out the columns that will be used for output into and X and Y datasets. The X dataset will have all of the columns that are used as predictors, the Y dataset will be used to tell the model what the outcome was from the corresponding row in the X dataset.
+
+```{r}
 x_train <- train %>%
   select(-SalePrice,-Id)
 y_train <- train %>%
@@ -17,6 +30,9 @@ x_test <- test %>%
 y_test <- test %>%
   select(SalePrice)
 ```
+
+# Reshaping the data
+We then have to reshape the data into a 1d array with 
 
 ```{r}
 # reshape
