--- a/Jeremy/learning_nn.Rmd
+++ b/Jeremy/learning_nn.Rmd
@@ -92,6 +92,6 @@ plot(history)
 ```
 
 ```{r}
-model %>% evaluate(x_test, y_test)
-0.041618258 * (max(all_data$SalePrice) - min(all_data$SalePrice)) + min(all_data$SalePrice)
+results <- model %>% evaluate(x_test, y_test)
+results[2] * (max(all_data$SalePrice) - min(all_data$SalePrice)) + min(all_data$SalePrice)
 ```
