--- a/Jeremy/learning_nn.Rmd
+++ b/Jeremy/learning_nn.Rmd
@@ -37,7 +37,8 @@ y_test <- test %>%
 
 # Reshaping the data
 
-We then have to reshape the data into a 1d array and get rid of the column names.
+We then have to reshape the data into a 2D array and get rid of the column names. The 2D array's new shape must match the shape of the input layer of the neural network, which is 33 for this dataset. Reshaping the data is a crucial step in preparing the data for neural network training. It ensures that the input data matches the shape expected by the neural network, reduces the number of dimensions, and optimizes memory usage, making the training process more efficient and effective.
+
 
 ```{r}
 # reshape
@@ -100,7 +101,7 @@ model %>% compile(
 ```{r}
 history <- model %>% fit(
   x_train, y_train, 
-  epochs = 200, batch_size = 256, 
+  epochs = 300, batch_size = 256, 
   validation_split = 0.2
 )
 ```
