--- a/Jeremy/neural_networks_tutorial.Rmd
+++ b/Jeremy/neural_networks_tutorial.Rmd
@@ -2,6 +2,7 @@
 library(keras)
 # install_keras() # Uncomment this line and run it once to install the newest version of keras on your computer, then comment out this line again
 library(dplyr)
+library(tidyr)
 ```
 
 # Read in the data
